# microscope

./: .gitignore  CMakeLists.txt  README.md  born_wolf_psf.hpp  cmicroscope.pxd  detection.hpp  emission.hpp  generate_table.cpp  integration.hpp  main.cpp  main_gpu.cpp  microscope.hpp  microscope_gpu.cu  plot.py  point_spreading_functions.hpp  sample.py  setup.py  test.cpp
doc/: test.csv
microscope/: CMakeLists.txt  detection.hpp  main_gpu.cpp  microscope.hpp  microscope_gpu.cu  microscope_gpu.h  psf_property.cpp  test.cpp
python/: CMakeLists.txt  decl.pxd  microscope.pyx  setup.py.in
samples/: plot.py  sample.py
